# demo-cmake-cpp-msvc

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  main.cu  readme.md
samples/: asio_boost.cpp  asio_standalone.cpp
